    not just milliseconds, so you can now carry the precision out further.
  * Added new "exit_on" configuration variable. This variable indicates
    which commands, should they error, will cause the jsqsh session to
    exit.
  * Command infrastructure is no pluggable so you can provide jars that
    add additional commands into jsqsh.
  * Query time is now carried out to milliseconds precision

Bug Fixes
  * Fixed NullPointerException when stored proc output parameters return a 
    NULL value. 
  * Fixed nested quotes in CALL statements like CALL MYPROC(?='Scott''s book')
  * Fixed bugs with word wrapping in "perfect" display mode
  * Handles failure of the driver to return the value for a column more 
    gracefully (instead of stopping the whole result set, just prints 
    "*ERROR*" in the column.
  * NullPointerException when calling a stored procedure in Sybase
  * Stop print DB2 warning about "statement succeeded". It is annoying.
  * Command line arguments with spaces in the value were not 
    handled properly 
  * Got rid of unecessary "*" when prompting for passwords
  * Fixed NPE if no password is provided at password prompt

Misc
  * Remove Jaql

Release 2.1.0

New Features
  * New build system! Jsqsh now builds with maven
  * Jsqsh JNI libraries are now built into the jar, plus added support for Power 
    Linux 64bit
  * New interactive connection setup wizards! This consists of the following:
     - First time startup of jsqsh will enter the setup wizard
     - The --setup startup option can enter the setup wizard
     - "\setup" command can enter the setup wizard
     - "\connect --setup" enters the connection setup wizard
     - "\drivers --setup" enters the driver setup wizard
  * Each JDBC driver may provide its own class path. This class path can be
    set via the driver setup wizard, and may include environment variables,
    such as "${ORACLE_HOME}/jdbc".
  * Special support for executing stored procedure with output parameters. 